objects/Address__x.object
<CustomObject>
    <fields>
        <fullName>AddressAccountKey__c</fullName>
        <description>AddressAccountKey</description>
        <externalDeveloperName>AddressAccountKey</externalDeveloperName>
        <label>AddressAccountKey</label>
        <length>255</length>
        <referenceTargetField>Account.Account_Key__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipName>AddressAccountKey</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Street</description>
        <externalDeveloperName>Street</externalDeveloperName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <description>ZipCode</description>
        <externalDeveloperName>ZipCode</externalDeveloperName>
        <label>ZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>Address</description>
    <externalDataSource>ExternalDataSourceProvider</externalDataSource>
    <externalName>Address</externalName>
    <label>Address</label>
    <pluralLabel>Address</pluralLabel>
</CustomObject>